added the first summary of the usability metrics, now including all relevant LaTex files, Edward is here working with me

--- a/usability-study/usability-metrics.tex
+++ b/usability-study/usability-metrics.tex
@@ -15,22 +15,22 @@
 \maketitle
 
 \section{Introduction}
-For out three metrics
+For our tests, we chose the world of online shopping. For our three metrics, we chose learnability, efficiency, and satisfaction. For our shopping websites, we chose Amazon, eBay, and Shopzilla. For out three tasks, we chose:
 
-Buying a Product: Buying a USB Stick
-Profile change: Adding and deleting a credit card number
-Simply by narrowing the choices down, get to the product you want Nokia Lumia 920
+\begin{enumerate}
+    \item Buying a product: a USB stick (test subject was told to find a USB stick they would personally buy)
+    \item Profile change: adding and deleting a credit card number
+    \item Narrowing a product down simply by using the navigation provided: Nokia Lumia 920
+\end{enumerate}
 
-Learnability
-Efficiency
-Satisfaction
+Some things to keep in mind for out tests:
 
-Amazon
-eBay
-Shopzilla
-
-
-
-
+\begin{itemize}
+    \item We assume that all testers have signed in
+    \item For shopping websites eBay and Shopzilla, efficiency times are up until they reach checkout
+    \item Test \#2 is omitted for Shopzilla (will be evaluated)
+    \item For Test \#2 on Paypal, test modified to use Paypal as a guest (same as using a credit card)
+    \item Satisfaction is based on a 1-10 scale
+\end{itemize}
 
 \end{document}  
