--- a/usability-study/usability-metrics.tex
+++ b/usability-study/usability-metrics.tex
@@ -30,7 +30,82 @@ Some things to keep in mind for out tests:
     \item For shopping websites eBay and Shopzilla, efficiency times are up until they reach checkout
     \item Test \#2 is omitted for Shopzilla (will be evaluated)
     \item For Test \#2 on Paypal, test modified to use Paypal as a guest (same as using a credit card)
-    \item Satisfaction is based on a 1-10 scale
+    \item Satisfaction is based on a 1-10 scale (1 being absolutely unhappy, 10 being extremely satisfied)
+    \item Learnability is on a scale from 1-5 (1 being difficult to familiarize with, 5 being easy to accomplish task)
 \end{itemize}
+
+\section{User types}
+
+\section{Tests}
+
+\subsection{Test \# 1: Buy a USB stick}
+
+Note: the efficiency for eBay is faster than both other shopping sites because it was only up to checkout.
+
+\subsubsection{User \#1}
+
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 4 & 0:41s & 7 \\ \hline
+    eBay & 3 & 0:24s & 7 \\ \hline
+    Shopzilla & 2 & 0:39s & 6 \\\hline
+\end{tabular}
+
+\subsubsection{User \#2}
+
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 5 & 0:37.5s & 8 \\ \hline
+    eBay & 5 & 0:17s & 6 \\ \hline
+    Shopzilla & 4 & 0:20s & 7 \\ \hline
+\end{tabular}
+
+\subsubsection{User \#3}
+
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 4 & 0:34s & 10 \\ \hline
+    eBay & 5 & 0:25s & 10 \\ \hline
+    Shopzilla & 5 & 0:34s & 8 \\ \hline
+\end{tabular}
+
+\subsubsection{User \#4}
+
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 4 & 0:20s & 7 \\ \hline
+    eBay & 3 & 0:33s & 8 \\ \hline
+    Shopzilla & 5 & 0:53s & 6 \\\hline
+\end{tabular}
+
+\subsubsection{User \#5}
+
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 4 & 0:32s & 8 \\ \hline
+    eBay & 5 & 0:22s & 10 \\ \hline
+    Shopzilla & 5 & 1:01s & 4 \\\hline
+\end{tabular}
+
+\subsubsection{Average of all 5 test subjects}
+
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 4.2 & 0:32.9s & 8 \\ \hline
+    eBay & 4.2 & 0:24.2s & 8.2 \\ \hline
+    Shopzilla & 4.2 & 0:41.4s & 6.2 \\\hline
+\end{tabular}
+
+\subsection{Test \# 2: Profile change}
+
+
+\subsection{Test \# 3: List filtering}
+
 
 \end{document}  
