added the tables for test # 2, Edward is compiling test results

--- a/usability-study/usability-metrics.tex
+++ b/usability-study/usability-metrics.tex
@@ -104,6 +104,65 @@ Note: the efficiency for eBay is faster than both other shopping sites because i
 
 \subsection{Test \# 2: Profile change}
 
+\subsubsection{User \#1}
+
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 5 & 1:01s & 7 \\ \hline
+    eBay & 1 & 1:00s & 5 \\ \hline
+    Shopzilla & - & - & - \\\hline
+\end{tabular}
+
+\subsubsection{User \#2}
+
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 1 & 1:24s & 7 \\ \hline
+    eBay & 3 & 0:49s & 7.5 \\ \hline
+    Shopzilla & - & - & - \\\hline
+\end{tabular}
+
+\subsubsection{User \#3}
+
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 5 & 1:08s & 10 \\ \hline
+    eBay & 1 & 1:50s & 2 \\ \hline
+    Shopzilla & - & - & - \\\hline
+\end{tabular}
+
+\subsubsection{User \#4}
+
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 4 & 1:21s & 9 \\ \hline
+    eBay & 3 & 0:50s & 7 \\ \hline
+    Shopzilla & - & - & - \\\hline
+\end{tabular}
+
+\subsubsection{User \#5}
+
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 5 & 0:47s & 10 \\ \hline
+    eBay & 5 & 0:37s & 10 \\ \hline
+    Shopzilla & - & - & - \\\hline
+\end{tabular}
+
+\subsubsection{Average of all 5 test subjects}
+
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 4 & 1:08.2s & 8.6 \\ \hline
+    eBay & 2.6 & 1:01.2s & 6.3 \\ \hline
+    Shopzilla & - & - & - \\\hline
+\end{tabular}
 
 \subsection{Test \# 3: List filtering}
 
