added tables for test # 3, Edward and I are getting the evaulations of each test ready

--- a/usability-study/usability-metrics.tex
+++ b/usability-study/usability-metrics.tex
@@ -166,5 +166,64 @@ Note: the efficiency for eBay is faster than both other shopping sites because i
 
 \subsection{Test \# 3: List filtering}
 
+\subsubsection{User \#1}
+
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 3 & 1:12s & 5.5 \\ \hline
+    eBay & 3 & 0:45s & 6 \\ \hline
+    Shopzilla & 3 & 0:25s & 5 \\\hline
+\end{tabular}
+
+\subsubsection{User \#2}
+
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 1 & 2:21.28s & 6.5 \\ \hline
+    eBay & 3 & 0:53s & 8 \\ \hline
+    Shopzilla & 3 & 0:28s & 8 \\\hline
+\end{tabular}
+
+\subsubsection{User \#3}
+
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 1 & 1:22s & 8 \\ \hline
+    eBay & 1 & 2:25s & 3 \\ \hline
+    Shopzilla & 5 & 0:41s & 9 \\\hline
+\end{tabular}
+
+\subsubsection{User \#4}
+
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 5 & 0:50s & 6 \\ \hline
+    eBay & 5 & 0:41s & 8 \\ \hline
+    Shopzilla & 1 & 0:28s & 4 \\\hline
+\end{tabular}
+
+\subsubsection{User \#5}
+
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 2 & 0:33s & 9 \\ \hline
+    eBay & 5 & 1:01s & 4 \\ \hline
+    Shopzilla & 1 & 0:38s & 3 \\\hline
+\end{tabular}
+
+\subsubsection{Average of all 5 test subjects}
+
+\begin{tabular}{| l | l | l | l |}
+    \hline
+     & Learnability & Efficiency & Satisfaction \\ \hline
+    Amazon & 2.4 & 1:15.656s & 7 \\ \hline
+    eBay & 3.4 & 1:09s & 5.8 \\ \hline
+    Shopzilla & 2.6 & 0:32s & 5.8 \\\hline
+\end{tabular}
 
 \end{document}  
