cleaned up the order of the file, moved sentences into the right areas

--- a/usability-study/usability-metrics.tex
+++ b/usability-study/usability-metrics.tex
@@ -7,7 +7,7 @@
 								% TeX will automatically convert eps --> pdf in pdflatex		
 \usepackage{amssymb}
 
-\title{Usability Metrics}
+\title{Usability Metrics for Online Shopping}
 \author{Andrew Kowalczyk \& Edward Bramanti}
 \date{\today}							% Activate to display a given date or no date
 
@@ -15,32 +15,34 @@
 \maketitle
 
 \section{Introduction}
-For our tests, we chose the world of online shopping. For our three metrics, we chose learnability, efficiency, and satisfaction. For our shopping websites, we chose Amazon, eBay, and Shopzilla. For out three tasks, we chose:
+For our tests, we chose the world of online shopping. For our shopping websites, we chose Amazon, eBay, and Shopzilla.
+For our three metrics, we chose learnability, efficiency, and satisfaction. Learnability is on a scale from 1-5: 1 being difficult to familiarize with, 5 being easy to accomplish the task. Efficiency is measured by seconds of completion. Satisfaction is based on a 1-10 scale: 1 being absolutely unhappy, 10 being extremely satisfied.  For our three tests, we chose:
 
 \begin{enumerate}
     \item Buying a product: a USB stick (test subject was told to find a USB stick they would personally buy)
-    \item Profile change: adding and deleting a credit card number
+    \item Profile change: adding and a credit card number
     \item Narrowing a product down simply by using the navigation provided: Nokia Lumia 920
 \end{enumerate}
 
-Some things to keep in mind for out tests:
+\section{Users}
 
-\begin{itemize}
-    \item We assume that all testers have signed in
-    \item For shopping websites eBay and Shopzilla, efficiency times are up until they reach checkout
-    \item Test \#2 is omitted for Shopzilla (will be evaluated)
-    \item For Test \#2 on Paypal, test modified to use Paypal as a guest (same as using a credit card)
-    \item Satisfaction is based on a 1-10 scale (1 being absolutely unhappy, 10 being extremely satisfied)
-    \item Learnability is on a scale from 1-5 (1 being difficult to familiarize with, 5 being easy to accomplish task)
-\end{itemize}
+Here is a summary of each user and their overall proficiencies:
 
-\section{User types}
+\begin{enumerate}
+    \item This user is a Modern Languages major with a decent amount of experience of shopping on line.
+    \item This user is an English major who doesn't really shop online, yet has a strong domain knowledge about computers.
+    \item This user is a Computer Science major who shops a decent amount online.
+    \item This user is a Computer Science major who shops pretty often online.
+    \item This user is a Computer Science major who shops less than normal.
+\end{enumerate}
 
 \section{Tests}
 
-\subsection{Test \# 1: Buy a USB stick}
+For every test, we assume that all testers have signed in.
 
-Note: the efficiency for eBay is faster than both other shopping sites because it was only up to checkout.
+\subsection{Buy a USB stick}
+
+The efficiency for eBay and Shopzilla is faster than Amazon other shopping sites because efficiency was only measured up to checkout.
 
 \subsubsection{User \#1}
 
@@ -102,7 +104,9 @@ Note: the efficiency for eBay is faster than both other shopping sites because i
     Shopzilla & 4.2 & 0:41.4s & 6.2 \\\hline
 \end{tabular}
 
-\subsection{Test \# 2: Profile change}
+\subsection{Profile change: add credit card number}
+    
+This test is omitted for Shopzilla because they are an aggregate website for other shopping websites. For eBay, the test needed to be done through Paypal because eBay uses PayPal as a payment method.
 
 \subsubsection{User \#1}
 
