added analysis for each test, and overall anaysis as well

--- a/usability-study/usability-metrics.tex
+++ b/usability-study/usability-metrics.tex
@@ -38,7 +38,7 @@ Here is a summary of each user and their overall proficiencies:
 
 \section{Tests}
 
-For every test, we assume that all testers have signed in.
+All testers have signed in on Amazon and eBay before beginning tests.
 
 \subsection{Buy a USB stick}
 
@@ -104,7 +104,11 @@ The efficiency for eBay and Shopzilla is faster than Amazon other shopping sites
     Shopzilla & 4.2 & 0:41.4s & 6.2 \\\hline
 \end{tabular}
 
-\subsection{Profile change: add credit card number}
+\subsection{Analysis}
+
+The learnability is equal amongst all three shopping websites because finding a USB stick isn't too hard. Shopzilla had pop-ups showing direct checkout for certain products which made learnability higher for that shopping website. eBay made it very easy to arrive to checkout. The overall interface of the website did not clearly determine a "winner" in terms of learnability. The efficiency is also fairly equal amongst all websites (due to the fact that the times for Shopzilla and eBay are up to checkout). Satisfaction was also fairly in the same level. Satisfaction is partially related to website appeal, so this metric is somewhat subjective. There was mention that the pop-up of the two day shipping hindered results for Amazon, but this simply seems like a personal preference.
+
+\subsection{Profile change: Add credit card number}
     
 This test is omitted for Shopzilla because they are an aggregate website for other shopping websites. For eBay, the test needed to be done through Paypal because eBay uses PayPal as a payment method.
 
@@ -168,7 +172,11 @@ This test is omitted for Shopzilla because they are an aggregate website for oth
     Shopzilla & - & - & - \\\hline
 \end{tabular}
 
-\subsection{Test \# 3: List filtering}
+\subsection{Analysis}
+
+This test was fairly interesting. Since Shopzilla was out of the running, it came down to Amazon and eBay. The learnability for Amazon was interesting because there are so many options for the user too look though. The link "Manage Payment Options" is not the most revealing of titles. In one of the test cases, the user had to use the search bar to find out how to remove a credit card for Amazon (not a test, yet interesting). For eBay, a user had to search google to figure out how to pay as a guest using PayPal.  Efficiency for Amazon was "slower" due to having more options for the user to look through.
+
+\subsection{List filtering for Nokia Lumia 920}
 
 \subsubsection{User \#1}
 
@@ -229,5 +237,12 @@ This test is omitted for Shopzilla because they are an aggregate website for oth
     eBay & 3.4 & 1:09s & 5.8 \\ \hline
     Shopzilla & 2.6 & 0:32s & 5.8 \\\hline
 \end{tabular}
+
+\subsection{Analysis}
+The learnability for the list filtering did not come to a real clear winner. Every site had some issues using their list navigation for finding the particular phone that we were looking for. In terms of efficiency, Shopzilla blows the other two out of the water. Satisfaction was led by Amazon just slightly.
+
+\section{Overall Analysis}
+
+According to the results, the shopping site with the highest learnabiilty is Amazon. The shopping site with the highest efficiency is Shopzilla. The shopping site with the highest satisfaction rate is Amazon.
 
 \end{document}  
