renamed all files to simply be 'heuristic-evaluation'

--- a/usability-study/heuristic-evaluation.tex
+++ b/usability-study/heuristic-evaluation.tex
@@ -8,7 +8,7 @@
 \usepackage{amssymb}
 
 \title{Heuristic Evaluation}
-\author{Andrew Kowalczyk and Edward Bramanti}
+\author{Andrew Kowalczyk}
 
 \begin{document}
 \maketitle
@@ -19,15 +19,13 @@ It is clear that Amazon has been doing things right for quite some time.
 
 \subsection{Amazon's Mental Model}
 
-From the first moment you set eyes on
+From the first moment you set eyes on the site, you know that Amazon is pushing lots of products.
 
 \section{eBay}
 
 \subsection{eBay's Mental Model}
 
 By looking at eBay's website, you can guide their intentions as to how they want the user to operate their website. By having a category list on the left of the page, the user is inclined to filter their way through their options.
-
-For out first test of buying a USB stick, 
 
 \section{Shopzilla}
 
