Feedback and updated standards development report for Assignment 0926.

--- a/usability-study/heuristic-evaluation.tex
+++ b/usability-study/heuristic-evaluation.tex
@@ -20,18 +20,25 @@ It is clear that Amazon has been doing things right for quite some time.
 \subsection{Amazon's Mental Model}
 
 From the first moment you set eyes on the site, you know that Amazon is pushing lots of products.
+% JD: Actually, based on what is in this writeup, I *don't* know.  What concretely indicates this?
+%     Where are the screenshots?  Examples?  Hard data (if available)?
+%
+%     As you probably know, this is very much the *start* of an analysis, not a complete one.  And,
+%     you need the tie-in to the metrics.  Seeing that connection is a key point of the exercise.
 
 \section{eBay}
 
 \subsection{eBay's Mental Model}
 
 By looking at eBay's website, you can guide their intentions as to how they want the user to operate their website. By having a category list on the left of the page, the user is inclined to filter their way through their options.
+% JD: The reference to a category list and how it affects user behavior is a step in the right
+%     direction.  More of this please.
 
 \section{Shopzilla}
 
 \subsection{Shopzilla's Mental Model}
 
 Looking at Shopzilla's main site, you can see that in their mental model users are inclined to type out what they are searching for. They are presented with a table of categories at the bottom of the page.
+% JD: Ditto on the "good start, but needs more" assessment for this section.
 
-
-\end{document}  
+\end{document}
