--- a/usability-study/usability-metrics.tex
+++ b/usability-study/usability-metrics.tex
@@ -39,6 +39,7 @@ Here is a summary of each user and their overall proficiencies:
 \section{Tests}
 
 All testers have signed in on Amazon and eBay before beginning tests.
+% JD: See my notes/changes on Ed's copy for more detailed feedback.
 
 \subsection{Buy a USB stick}
 
