added an abstract to the paper, formed some inital thoughts into my introduction, and started to mention literature that I hace consulted

--- a/mental-model-paper/death-of-metaphor.bib
+++ b/mental-model-paper/death-of-metaphor.bib
@@ -1,9 +1,14 @@
 @article{bae16,
-       author={Bakker, Saskia and Alissa N. Antle and Elise van den Hoven},
-       title={Embodied metaphors in tangible interaction design},
-       journal={Personal and Ubiquitous Computing},
-       volume={16},
-       issue={4},
-       year = 2012,
-       pages = {433-449}
-}
+	Author = {Bakker, Saskia and Alissa N. Antle and Elise van den Hoven},
+	Issue = {4},
+	Journal = {Personal and Ubiquitous Computing},
+	Pages = {433-449},
+	Title = {Embodied metaphors in tangible interaction design},
+	Volume = {16},
+	Year = 2012}
+	
+@misc{ewd1036,
+	Author = {Edsgar W. Djikstra},
+	Title = {On the cruelty of really teaching computer science},
+	Year = 1988}
+	
