added an initial summary of Djikstra's argument

--- a/mental-model-paper/death-of-metaphor.tex
+++ b/mental-model-paper/death-of-metaphor.tex
@@ -29,11 +29,11 @@ Metaphor limits the designer because it gives less freedom to employ there way t
 
 \section{Background, Prior Work, and Literature Read}
 
-In this section, I go over the literature I read to support my claims and how they relate to my argument.
-
 \subsection{Background}
 
 \subsection{Literature Read}
+
+In this section, I go over the literature I read to support my claims and how they relate to my argument.
 
 \subsubsection{Apple's push away from metaphor}
 
@@ -44,12 +44,12 @@ Apple has realized that as technology is becoming more and more ingrained into o
 \subsubsection{Minimalism in Computer Science}
 Minimalism is a very sought out concept in computer science. Code golf (writing programs with as little characters as possible), 
 
-\subsubsection{Djikstra's argument}
+\subsubsection{Djikstra's argument for}
 Edsgar Dijkstra, one of the most important computer scientists, claimed that metaphor was extremely damaging to the profession even before the age of personal computers and the rise of GUI's. He initially introduces his argument by explaining the way in which we approach tomorrow's struggles. He says the most common way of facing tomorrow is by ``means of metaphors and analogies'' so that ``we try to link the new to the old, the novel to the familiar''. He makes the claim that coping with novelty in this fashion is extremely detrimental for a number of reasons.
 
-First, he does admit that in the cases of ``sufficiently slow and gradual change'', metaphor works reasonably well. A powerful example if language. The process by which word's meaning evolve is a slow and gradual process. Yet, in the case of ``sharp discontinuity'', the employment of metaphor breaks down. metaphor becomes more ``misleading than illuminating''. It makes sense, doesn't it? In a field that changes nearly daily, the relevance of our 
+First, he does admit that in the cases of ``sufficiently slow and gradual change'', metaphor works reasonably well. A powerful example of this is the field of mathematics. The community of this discipline has never really challenged the ways of teaching, learning, and understanding itself. Djikstra puts it the best, ``Simply by definition, mathematics will continue to be what it used to be.''
 
-\cite{ewd1036}
+Yet, in the case of ``sharp discontinuity'', the employment of metaphor breaks down. Metaphor becomes more ``misleading than illuminating''. It makes sense, doesn't it? In a field that changes nearly daily, the heavy reliance of our past limits the way in which the field can evolve. \cite{ewd1036}
 
 \subsubsection{Summary of literature read}
 
