added a source with a url

--- a/mental-model-paper/death-of-metaphor.bib
+++ b/mental-model-paper/death-of-metaphor.bib
@@ -5,10 +5,18 @@
 	Pages = {433-449},
 	Title = {Embodied metaphors in tangible interaction design},
 	Volume = {16},
-	Year = 2012}
+	Year = 2012
+}
 	
 @misc{ewd1036,
 	Author = {Edsgar W. Djikstra},
 	Title = {On the cruelty of really teaching computer science},
-	Year = 1988}
+	Year = 1988
+}
 	
+@misc{ars-technica-mavericks,
+	title = {OS X 10.9 Mavericks: The Ars Technica Review},
+	author = {John Siracusa},
+	year = {2013},
+	note = {\url{http://arstechnica.com/apple/2013/10/os-x-10-9/} (last accessed on 10/29/13)}
+}
