--- a/mental-model-paper/death-of-metaphor.tex
+++ b/mental-model-paper/death-of-metaphor.tex
@@ -5,6 +5,7 @@
 \usepackage{graphicx}				% Use pdf, png, jpg, or eps§ with pdflatex; use eps in DVI mode
 								% TeX will automatically convert eps --> pdf in pdflatex		
 \usepackage{amssymb}
+\usepackage{url}
 
 \title{The Death of Metaphor}
 \author{Andrew Kowalczyk}
@@ -24,6 +25,7 @@ In terms of how long humans have been roaming this earth, electronic technology 
 Imagine a computer scientist thinking about how they could design a user interface that works well with people who are not technical? Use what they already know. 
 
 Metaphor limits the designer because it gives less freedom to employ there way they do things. Metaphor limits the user because it disallows for true learning.
+\cite{ars-technica-mavericks}
 
 \cite{bae16}
 
