--- a/mental-model-paper/death-of-metaphor.bib
+++ b/mental-model-paper/death-of-metaphor.bib
@@ -20,3 +20,47 @@
 	year = {2013},
 	note = {\url{http://arstechnica.com/apple/2013/10/os-x-10-9/} (last accessed on 10/29/13)}
 }
+
+@article{reification,
+ 	author = {Blackwell, Alan F.},
+ 	title = {The reification of metaphor as a design tool},
+ 	journal = {ACM Trans. Comput.-Hum. Interact.},
+ 	issue_date = {December 2006},
+ 	volume = {13},
+ 	number = {4},
+ 	month = dec,
+ 	year = {2006},
+ 	issn = {1073-0516},
+ 	pages = {490--530},
+ 	numpages = {41},
+ 	url = {http://doi.acm.org/10.1145/1188816.1188820},
+ 	doi = {10.1145/1188816.1188820},
+ 	acmid = {1188820},
+ 	publisher = {ACM},
+ 	address = {New York, NY, USA},
+ 	keywords = {UI metaphor, design research, history of HCI},
+} 
+
+@book{apple,
+	author = {Apple Computer, Inc.},
+	title = {Macintosh Human Interface Guidelines},
+	year = {1992},
+	publisher = {Addison Wesley},
+	address = {Reading, MA.}
+}
+
+@book{essence,
+	author = {Faulkner, Christine},
+	title = {The Essence of Human-Computer Interaction},
+	year = {1998},
+	publisher = {Prentice Hall}, 
+	address = {Hemel Hempstead, UK}
+}
+
+@book{practical,
+	author = {Hill, Stephen},
+	title = { A Practical Introduction to the Human Computer Interface in a Semester},
+	year = {1995},
+	publisher = {DP Publications}, 
+	address = {London}}
+}
