title to the top, added more to introduction

--- a/mental-model-paper/death-of-metaphor.tex
+++ b/mental-model-paper/death-of-metaphor.tex
@@ -6,19 +6,30 @@
 								% TeX will automatically convert eps --> pdf in pdflatex		
 \usepackage{amssymb}
 \usepackage{url}
+\usepackage{titling}
 
-\title{The Death of Metaphor}
+\setlength{\droptitle}{-10em}
+
+\title{The Oncoming Death of Metaphor}
 \author{Andrew Kowalczyk}
 \date{October 31, 2013}							% Activate to display a given date or no date
 
 \begin{document}
 \maketitle
 
-Metaphor, in the broadest sense of the term for the discipline of a computer science, is a group of user interface images and activities that take advantage of particular proficiencies that users already have of other domains. Typical examples include using a tool or some kind of gear to represent Settings or Preferences on some operating system or ``flipping'' a page in a book reading app.  Although the majority of people designing user interfaces of any sort employ metaphors heavily today, I argue that the beginning of the end of metaphor is well on it's way.  
+Metaphor, in the broadest sense of the term for the discipline of a computer science, is a group of user interface images and activities that take advantage of particular proficiencies that users already have of other domains. Typical examples include using a tool or some kind of gear to represent Settings or Preferences on some operating system or ``flipping'' a page in a book reading app.  Although the majority of people designing user interfaces of any sort employ metaphors heavily today, I argue that the beginning of the end of metaphor is well on it's way (and should be sought out after).
 
-\section{Introduction}
+\section{Introduction \cite{reification}}
 
-Although this phenomenon is not extremely widespread just yet, hints of the oncoming change can be seen everywhere. Metaphor is starting to wane.
+Metaphor may seem like a new phenomenon in CS (Computer Science) to people not involved in the field. 
+
+
+
+Yet, history says otherwise. In years like 1998, writers like Faulkner were writing that, ``Designers of systems should, where possible, use metaphors that the user will be familiar with.'' \cite{essence}  Or in 1995, Hill wrote, ``Metaphors make it easy to learn about unfamiliar objects.'' \cite{practical} Or even earlier in 1992, Macintosh's human interface guidelines say, ``Use metaphors involving concrete, familiar ideas and make the metaphors plain, so that users have a set of expectations to apply to computer environments.'' \cite{apple}
+
+Wait, wait, wait. Did you read all that? Every single one of the citations mentioned that metaphors should be used in design. Every single one. Just as the corpus calossum connects the left and right hemispheres of the brain (often perceived as left being analytical, technical, and logical and right as being creative, artistic, and expressive), computer scientist believed metaphor connected them to the highly artistic and non-technical people. 
+
+common misconceptions of differences between right and left make allusions to people.
 
 In terms of how long humans have been roaming this earth, electronic technology is quite a new thing for our two-legged species. Within the last 50 years, hard drive capacities have exponentially grown while their physical space has exponentially shrunk. Seeing that technology changes nearly on a daily basis, it seems that it would be logical for computer scientists to employ the concept of metaphor. For nontechnical users, it would make sense to employ powerful metaphors which simulate real-life. One would assume that adding more life like design into the way someone interacts with a given piece of technology would increase their overall usability. In terms of creating a usable interface, it is funny to think that they way in which we interact with that technology hasn't changed all too much. In the examples that I mentioned in the abstract, users know that tools can modify things in real life, the connection is clear for any user utilizing that said operating system.
 
@@ -47,11 +58,12 @@ Apple has realized that as technology is becoming more and more ingrained into o
 Minimalism is a very sought out concept in computer science. Code golf (writing programs with as little characters as possible), 
 
 \subsubsection{Djikstra's argument for}
-Edsgar Dijkstra, one of the most important computer scientists, claimed that metaphor was extremely damaging to the profession even before the age of personal computers and the rise of GUI's. He initially introduces his argument by explaining the way in which we approach tomorrow's struggles. He says the most common way of facing tomorrow is by ``means of metaphors and analogies'' so that ``we try to link the new to the old, the novel to the familiar''. He makes the claim that coping with novelty in this fashion is extremely detrimental for a number of reasons.
+Edsgar Dijkstra, one of the most important computer scientists, claimed that metaphor was extremely damaging to the profession even before the age of personal computers and the rise of GUI's. In a transcript titled \textit{On the cruelty of really teaching computing science}, he initially introduces his argument by explaining the way in which we approach tomorrow's struggles. He says the most common way of facing tomorrow is by ``means of metaphors and analogies'' so that ``we try to link the new to the old, the novel to the familiar''. He makes the claim that coping with "radical novelties" in this fashion is extremely detrimental for the field of computer science for a number of reasons.
 
 First, he does admit that in the cases of ``sufficiently slow and gradual change'', metaphor works reasonably well. A powerful example of this is the field of mathematics. The community of this discipline has never really challenged the ways of teaching, learning, and understanding itself. Djikstra puts it the best, ``Simply by definition, mathematics will continue to be what it used to be.''
 
-Yet, in the case of ``sharp discontinuity'', the employment of metaphor breaks down. Metaphor becomes more ``misleading than illuminating''. It makes sense, doesn't it? In a field that changes nearly daily, the heavy reliance of our past limits the way in which the field can evolve. \cite{ewd1036}
+Yet, in the case of ``sharp discontinuity'', the employment of metaphor breaks down. Metaphor becomes more ``misleading than illuminating''. It makes sense, doesn't it? In a field that changes nearly daily, the heavy reliance of our past limits the way in which the field can evolve.
+\cite{ewd1036}
 
 \subsubsection{Summary of literature read}
 
